# hackaton-inflation-case

./: .env.example  .gitignore  README.md  app.py  create_db.py  neural_network.py  pyproject.toml  why_use.md
api/: neural_network.py
core/: config.py
db/: base.py  base_class.py  session.py
models/: y_train.py
scheme/: y_train.py
tests/: test_1.txt  test_2.txt  test_7.txt  test_adp_1.txt  test_adp_3.txt  test_adp_7.txt
tests/notebook/: Inflation_forecast_notebook.ipynb  forecast.py  test_forecast.py
